a few to-do changes

--- a/src/main/resources/resources/Bundle.properties
+++ b/src/main/resources/resources/Bundle.properties
@@ -63,3 +63,4 @@ ListUsersTitle_firstname=Firstname
 ListUsersTitle_lastname=Lastname
 ListUsersTitle_dob=Dob
 ListUsersTitle_userId=UserId
+ProjectTitle=Bettaway Test Web Application
